Remove Java 11 Path.of